fix-notification-z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,10 @@ h1,h2,h3,h4,h5,h6,p {
   user-select: none;
 }
 
+.swiper__fixed .swiper {
+  z-index: -1;
+}
+
 
 
 @media screen and (min-width: 1px) {
